[gd_scene load_steps=2 format=3 uid="uid://3n88f055qc7j"]

[ext_resource type="Script" path="res://scenes/components/weapon components/projectile_spawn_component.gd" id="1_0228w"]

[node name="projectile_spawn_component" type="Node2D"]
script = ExtResource("1_0228w")

[node name="SpawnDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="SpawnDelay" to="." method="_on_spawn_delay_timeout"]
